<resources>
    <string name="app_name">Udacity Movie App</string>

    <!-- Discovery categories -->
    <string name="most_popular_category">Most popular</string>
    <string name="highest_rated_category">Highest rated</string>
    <string name="highest_grossing_category">Highest grossing</string>

    <!-- Navigation drawer -->
    <string name="my_favorites_navigation">My favorites</string>
    <string name="drawer_open">Navigation drawer opens</string>
    <string name="drawer_close">Navigation drawer closes</string>
    <string name="navigation_header_content_description">Decorative photo to symbolize Hollywood/movies.</string>
    <string name="discovery_section">Discover movies</string>
    <string name="my_library_section">My library</string>

    <!-- Discovery activity -->
    <string name="poster_content_description">Movie poster</string>
    <string name="average_vote_format">%1$.1f</string>

    <!-- Movie activity -->
    <string name="backdrop_content_description">Movie backdrop</string>
    <string name="favorite_icon_content_description">An icon that indicates if this movie is your favorite.</string>
    <string name="release_year_label">Release year</string>
    <string name="runtime_label">Runtime</string>
    <string name="rating_label">Rating</string>
    <string name="video_content_description">A video from the movie (e.g. a trailer or clip)</string>
    <string name="reviews_header">Reviews</string>

    <!-- Favorite activity -->
    <string name="favorite_activity_title">Your favorites</string>

    <!-- No network connectivity activity -->
    <string name="network_down">Sadly, your internet appears to be down.</string>

    <!-- Toasts -->
    <string name="network_restored_toast">Network has been restored. You\'ll see fresh data.</string>
    <string name="network_lost_toast">Network has been lost. You\'ll see cached data only.</string>

    <!-- Action bar menu -->
    <string name="share_action">Share</string>
    <string name="share_subject">Check out this movie!</string>
</resources>
