<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:title="@string/discovery_section">
            <menu>
                <item
                    android:icon="@drawable/ic_people_black_24dp"
                    android:id="@+id/discover_most_popular_menu_item"
                    android:title="@string/most_popular_category"/>
                <item
                    android:icon="@drawable/ic_star_black_24dp"
                    android:id="@+id/discover_highest_rated_menu_item"
                    android:title="@string/highest_rated_category"/>
                <item
                    android:icon="@drawable/ic_attach_money_black_24dp"
                    android:id="@+id/discover_highest_grossing_menu_item"
                    android:title="@string/highest_grossing_category"/>
            </menu>
        </item>
    </group>
    <group>
        <item android:title="@string/my_library_section">
            <menu>
                <item
                    android:icon="@drawable/ic_favorite_black_24dp"
                    android:id="@+id/send_feedback_menu_item"
                    android:title="@string/my_favorites_navigation"/>
            </menu>
        </item>
    </group>
</menu>