<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.playposse.udacitymovie.activity.MovieFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backdrop_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/backdrop_content_description"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/translucentBackground"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/lightTextColor"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tagline_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/lightTextColor"
                    android:textSize="12sp"
                    android:textStyle="italic"/>
            </LinearLayout>
        </RelativeLayout>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap"
            app:alignmentMode="alignBounds"
            app:columnCount="2">

            <ImageView
                android:id="@+id/poster_image_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster_content_description"
                app:layout_columnWeight="1"/>

            <android.support.v7.widget.GridLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_gap"
                app:columnCount="2"
                app:layout_columnWeight="2">

                <TextView
                    android:id="@+id/overview_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    app:layout_columnSpan="2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/release_year_label"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/release_year_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime_label"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/runtime_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_label"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/rating_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_columnWeight="1"/>
            </android.support.v7.widget.GridLayout>
        </android.support.v7.widget.GridLayout>
    </LinearLayout>
</ScrollView>
